fix(#8): Update the header layout and align the home button with the header content

--- a/services/files/front/components/game-header/game-header.css
+++ b/services/files/front/components/game-header/game-header.css
@@ -1,6 +1,17 @@
 :host {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     height: 100%;
+    margin: 0;
+    width: 100%;
+}
+
+div {
+    display: flex;
+}
+
+p {
+    margin: 0 0 0 20px;
+    font-size: 1.5rem;
 }
